# trading_bot_simple

./: .coveragerc  .env.example  .gitignore  AGENTS.md  ASSET_SELECTION_METHODOLOGY.md  CHANGELOG.md  CLAUDE.md  PERFORMANCE_REPORT.md  README.md  README_TESTING.md  conv.txt  data.py  environment-simple.yml  generate_test_fixtures.py  main.py  multi_asset_tester.py  optimizer.py  pytest.ini  results_visualizer.py  risk_config.py  risk_managed_strategies.py  risk_managed_strategy.py  risk_management.py  run_tests.py  strategies.py  strategy.py  test_all_strategies.py  test_bot.py  test_risk_management.py  visualization.py
.claude/agents/: code-reviewer.md  fintech-requirements-architect.md  spec-driven-engineer.md
.devcontainer/: README.md  devcontainer.json
.github/workflows/: tests.yml
data_cache/: AAPL_19000101_20250924.json  AAPL_20200101_20250924.json  AAPL_20200101_20250925.json  AAPL_20230101_20230101.json  AAPL_20230101_20250924.json  ADA-USD_20200101_20250924.json  ADA-USD_20200101_20250925.json  AMZN_20200101_20250924.json  AMZN_20200101_20250925.json  AVAX-USD_20200101_20250925.json  BNB-USD_20200101_20250925.json  BTC-USD_20200101_20240924.json  BTC-USD_20200101_20250924.json  BTC-USD_20200101_20250925.json  DOT-USD_20200101_20250925.json  ETH-USD_20200101_20240924.json  ETH-USD_20200101_20250924.json  ETH-USD_20200101_20250925.json  GLD_20200101_20250924.json  GLD_20200101_20250925.json  GOOGL_20200101_20250924.json  GOOGL_20200101_20250925.json  JNJ_20200101_20250924.json  JNJ_20200101_20250925.json  JPM_20200101_20250924.json  JPM_20200101_20250925.json  KO_20200101_20250924.json  KO_20200101_20250925.json  LINK-USD_20200101_20250925.json  MATIC-USD_20200101_20250925.json  MSFT_20200101_20250924.json  MSFT_20200101_20250925.json  PG_20200101_20250924.json  PG_20200101_20250925.json  QQQ_20200101_20250924.json  QQQ_20200101_20250925.json  SOL-USD_20200101_20250925.json  SPY_20200101_20250924.json  SPY_20200101_20250925.json  TSLA_20200101_20240924.json  (+9 more)
docs/risk-management/: 01-overview.md  02-position-sizing.md  03-stop-losses.md  04-portfolio-heat.md  05-drawdown-protection.md  06-strategy-profiles.md  07-configuration.md  08-examples.md  09-testing.md  README.md
enterprise-version/: CLAUDE.md  DEVELOPMENT_PLAN.md  PHASE_1_TECHNICAL_SPECIFICATIONS.md  README.md  environment.yml  pyproject.toml
tests/: fixtures.json  test_data.py  test_multi_asset_tester.py  test_optimizer.py  test_results_visualizer.py  test_risk_management.py  test_strategies.py
